update + postman collection + more docs
