# Controllers/ThreadController.cs
@@ -8,12 +8,12 @@ namespace CheezAPI.Controllers
 {
     [ApiController]
     [Route("api/v1/topics/{TopicID}/threads")]
-    public class FthreadController : ControllerBase
+    public class ThreadController : ControllerBase
     {
         private readonly CheezContext _context;
-        private readonly ILogger<FthreadController> _logger;
+        private readonly ILogger<ThreadController> _logger;
 
-        public FthreadController(CheezContext context, ILogger<FthreadController> logger)
+        public ThreadController(CheezContext context, ILogger<ThreadController> logger)
         {
             _context = context;
             _logger = logger;
@@ -21,11 +21,16 @@ namespace CheezAPI.Controllers
 
         // GET: api/v1/topics/{TopicID]/threads 200 OK
         [HttpGet]
-        public async Task<ActionResult<IEnumerable<FthreadDto>>> GetFthreads(int TopicID)
+        public async Task<ActionResult<IEnumerable<ThreadDto>>> GetThreads(int TopicID)
         {
-            var fthreads = await _context.Fthreads.Where(f => f.TopicID == TopicID).ToListAsync();
+            var topic = await _context.Topics.FindAsync(TopicID);
+            if (topic == null)
+            {
+                return NotFound("Topic not found.");
+            }
+            var fthreads = await _context.Threads.Where(f => f.TopicID == TopicID).ToListAsync();
 
-            return Ok(fthreads.Select(f => new FthreadDto
+            return Ok(fthreads.Select(f => new ThreadDto
             {
                 Title = f.Title,
                 CreatedAt = f.CreatedAt,
@@ -35,35 +40,41 @@ namespace CheezAPI.Controllers
 
         //GET: api/v1/topics/{TopicID/threads/{id} 200 OK
         [HttpGet("{id}")]
-        public async Task<ActionResult<FthreadDto>> GetThread(int TopicID, int id)
+        public async Task<ActionResult<ThreadDto>> GetThread(int TopicID, int id)
         {
-            var fthread = await _context.Fthreads.FindAsync(id);
-            if (fthread == null)
+            var topic = await _context.Topics.FindAsync(TopicID);
+            if (topic == null)
             {
-                return NotFound();
+                return NotFound("Topic not found.");
             }
-            return Ok(new FthreadDto
+
+            var thread = await _context.Threads.FindAsync(id);
+            if (thread == null)
             {
-                Title = fthread.Title,
-                CreatedAt = fthread.CreatedAt,
-                IsLocked = fthread.IsLocked
+                return NotFound("Thread not found.");
+            }
+            return Ok(new ThreadDto
+            {
+                Title = thread.Title,
+                CreatedAt = thread.CreatedAt,
+                IsLocked = thread.IsLocked
             });
         }
 
         //POST: api/v1/topics/{TopicID}/threads 201 Created
         [HttpPost]
-        public async Task<ActionResult<FthreadDto>> PostThread(int TopicID, FthreadCreateDto fthreadCreateDto)
+        public async Task<ActionResult<ThreadDto>> PostThread(int TopicID, ThreadCreateDto threadCreateDto)
         {
             var thread = new Fthread
             {
-                Title = fthreadCreateDto.Title,
+                Title = threadCreateDto.Title,
                 CreatedAt = DateTime.Now,
                 TopicID = TopicID
             };
 
-            if (await _context.Fthreads.AnyAsync(f => f.Title == fthreadCreateDto.Title))
+            if (await _context.Threads.AnyAsync(f => f.Title == threadCreateDto.Title))
             {
-                return BadRequest("Thread title already used.");
+                return Conflict("Thread title already used.");
             }
 
             if (string.IsNullOrEmpty(thread.Title))
@@ -77,10 +88,10 @@ namespace CheezAPI.Controllers
                 return NotFound("Topic not found.");
             }
 
-            _context.Fthreads.Add(thread);
+            _context.Threads.Add(thread);
             await _context.SaveChangesAsync();
 
-            return CreatedAtAction(nameof(GetThread), new { TopicID = TopicID, id = thread.FthreadID }, new FthreadDto
+            return CreatedAtAction(nameof(GetThread), new { TopicID = TopicID, id = thread.FthreadID }, new ThreadDto
             {
                 Title = thread.Title,
                 CreatedAt = thread.CreatedAt,
@@ -90,12 +101,24 @@ namespace CheezAPI.Controllers
 
         //PUT: api/v1/topics/{TopicID}/threads/{id} 204 No Content
         [HttpPut("{id}")]
-        public async Task<ActionResult<FthreadDto>> PutThread(int TopicID, int id, FthreadUpdateDto fthreadUpdateDto)
+        public async Task<ActionResult<ThreadDto>> UpdateThread(int TopicID, int id, ThreadUpdateDto fthreadUpdateDto)
         {
-            var thread = await _context.Fthreads.FindAsync(id);
+            var topic = await _context.Topics.FindAsync(TopicID);
+
+            if (topic == null)
+            {
+                return NotFound("Topic not found.");
+            }
+
+            var thread = await _context.Threads.FindAsync(id);
             if (thread == null)
             {
-                return NotFound();
+                return NotFound("Thread not found");
+            }
+
+            if (await _context.Threads.AnyAsync(f => f.Title == fthreadUpdateDto.Title))
+            {
+                return Conflict("Thread title already used.");
             }
 
             if (fthreadUpdateDto.Title != null)
@@ -123,13 +146,13 @@ namespace CheezAPI.Controllers
                 return NotFound("Topic not found.");
             }
 
-            var thread = await _context.Fthreads.FindAsync(id);
+            var thread = await _context.Threads.FindAsync(id);
             if (thread == null)
             {
-                return NotFound();
+                return NotFound("Thread not found");
             }
 
-            _context.Fthreads.Remove(thread);
+            _context.Threads.Remove(thread);
             await _context.SaveChangesAsync();
 
             return NoContent();
